# demo

.mirrord/: headers.mirrord.json  mirrord.json  path.mirrord.json  steal.mirrord.json
bot-frontend/: Dockerfile  app.py  app.yaml  pyproject.toml
data-service/: Dockerfile  app.yaml  index.js  package-lock.json  package.json
logger-service/: Dockerfile  go.mod  main.go  output.txt
logger-service-2/: Dockerfile  Program.cs  app.yaml  logger-service-2.csproj  output.txt
